--- a/admin/assets/css/templatemo-style.css
+++ b/admin/assets/css/templatemo-style.css
@@ -464,7 +464,19 @@ input[type="checkbox"]:focus {
   height: 40px;
   text-align: center;
 }
+.tm-product-edit-link {
+  padding: 10px;
+  border-radius: 50%;
+  background-color: #394e64;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+}
 .tm-product-delete-link:hover .tm-product-delete-icon {
+  color: #ce1e1e;
+}
+.tm-product-edit-link:hover .tm-product-edit-icon {
   color: #6d8ca6;
 }
 .custom-select {
