--- a/admin/assets/css/templatemo-style.css
+++ b/admin/assets/css/templatemo-style.css
@@ -533,6 +533,7 @@ input[type="checkbox"]:focus {
 }
 .tm-product-img-dummy {
   max-width: 100%;
+  height: 240px;
   display: flex;
   align-items: center;
   justify-content: center;
